# short-term-trading-engine

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .ignore  .mcp.json  .pre-commit-config.yaml  .venv  CLAUDE.md  PROJECT_PROFILE.yaml  README.md  TODO.md  dashboard.py  dfcr_corporate_actions.txt  dfcr_fundamentals_quarterly.txt  ecr_carver.txt  ecr_catalyst.txt  ecr_catalyst_data_dependencies_2026-05-20.txt  ecr_momentum_data_dependencies_2026-05-20.txt  pyproject.toml  railpack.toml  railway.json  vulture_allowlist.py
.claude/: path_registry.yaml  settings.json
.github/: pull_request_template.md
archive/: run_sigma_search.sh  smoke_test.py
canary/: backtest.py  models.py  scheduler.py
carver/: __init__.py  backtest.py  models.py  scheduler.py
catalyst/: __init__.py  backtest.py  models.py  scheduler.py
console/: .vercelignore  package-lock.json  package.json  vercel.json
console-api/: data_pipeline.py  main.py  pyproject.toml  railpack.toml  requirements.txt
dashboard_components/: __init__.py  charts.py  defect_register.py  escalation.py  health.py
design_handoff_trading_console/: README.md  Trading Console.html
docs/: CLAUDE_SESSION_OBSERVABILITY.md  DATABASE_AND_DATAFLOW.md  DATA_INVARIANTS.md  DEV_PIPELINE_STANDARD.md  EDGE_VALIDATION_PLAN.md  ENGINE_ESCALATION_HARDENING_LADDER.md  ESCALATION_HARDENING_LADDER.md  MASTER_PLAN.md  MEMORY_MAINTENANCE.md  MEMSTORE_HANDOFF.md  OPERATIONS.md  SECURITY_GUIDANCE.md  STYLE_GUIDE.md  engine_llm_triage_persona.md  glossary.md  lab_finder_persona.md  llm_aar_persona.md  llm_data_triage_operator_runbook.md  llm_edge_finder_operator_runbook.md  session-log.md
momentum/: __init__.py  backtest.py  lab_vol_managed.py  models.py  scheduler.py
ops/: __init__.py  _diag_runtime.py  aar_autotune.py  allocator_heartbeat.py  apply_railway_service_config.py  cron_corporate_actions.py  cron_fundamentals_refresh.py  cron_validation.py  cutover_agent.py  data_repair_service.py  defect_register.py  engine_dispatch.py  engine_ladder.py  engine_llm_triage.py  engine_service.py  engine_supervisor.py  ingestion_engine.py  lane_service.py  llm_aar_anthropic_ids.py  llm_aar_critic.py  llm_aar_critic_sdk.py  llm_data_recovery.py  llm_data_triage.py  llm_edge_finder.py  llm_edge_finder_sdk.py  llm_finder_anthropic_ids.py  llm_finder_outcome_monitor.py  llm_lab_emitter.py  llm_triage_service.py  operator_trigger_lane.py  platform_pipeline.py  weekly_digest.py
platform/: README.md
publishing/stelib/: PACKAGE_README.md  PUBLISH.md  pyproject.toml
publishing/stelib/stelib/: __init__.py  calendar.py  errors.py  order_ids.py
publishing/stelib/stelib/aar/: reader.py  writer.py
publishing/stelib/stelib/backtest/: __init__.py  __main__.py  cli.py  cost_model.py  credibility.py  equivalence.py  harness.py  monte_carlo.py  price_loader.py  search.py  sensitivity.py  spread_estimator.py  spread_estimator_archive.py  statistical_significance.py  universe.py
publishing/stelib/stelib/forensics/: __init__.py  dossier.py  service.py
publishing/stelib/stelib/indicators/: __init__.py  adx.py  bbands.py  chop.py  fear_greed.py
publishing/stelib/stelib/interfaces/: data.py  engine_plug.py
publishing/stelib/stelib/lab/: __init__.py  context.py  models.py  target.py
publishing/stelib/stelib/order_management/: __init__.py  base_order_manager.py  stale_order_cancel.py
publishing/stelib/stelib/parity/: harness.py
publishing/stelib/stelib/risk/: batch_gate.py  governor.py  limits_profile.py  persistent_store.py
publishing/stelib/stelib/tax/: __init__.py  loss_harvester.py
reversion/: __init__.py  backtest.py  backtest_earnings_quality.py  diagnose_backtest.py  lab_pca_residual.py  models.py  order_manager.py  regime_filter.py  scheduler.py
scripts/: _advisory_lock_holder.py  _csv_compress.py  _log_event.py  agent_pr_label_guard.py  anthropic_aar_critic_provision.py  anthropic_agent_provision.py  assign_liquidity_tiers.py  audit_all_tables.py  audit_code_duplication.py  audit_corpus_fitness.py  audit_data_pipeline.py  audit_per_ticker_gaps.py  audit_pipeline.py  backfill_alpaca_csv.py  backfill_backtest_universe.py  backfill_catalyst_events.py  backfill_corp_actions_csv.py  backfill_country_from_fmp.py  backfill_earnings_events.py  backfill_failed_alpha_ledger.py  backfill_fmp_csv.py  backfill_fundamentals.py  backfill_sentinel_etfs.py  check_manifests.py  check_momentum_orders.sh  check_momentum_positions.sh  claude_session_report.py  cleanup_bad_price_rows.py  cleanup_fundamentals_integrity.py  compare_baselines.py  compress_backfill_csvs.py  compute_fundamental_ratios.py  db_snapshots.py  dump_baseline_archives.py  extract_tradier.py  extract_tradier_full.py  gen_engine_manifest.py  generate_tip_sheet.py  git_hygiene.sh  ingest_tradier_csv.py  (+121 more)
sentinel/: __init__.py  activation_probe.py  backtest.py  models.py  scheduler.py
sigma/: MASTER_PLAN.md  __init__.py  backtest.py  backtest_chop.py  models.py  order_manager.py  scheduler.py
tests/: conftest.py  test_backfill_sec_metadata_stage.py  test_block_unbulked_vendor_crawl_present.py  test_branch_base_sentinel_present.py  test_classification_id_finalize_migrations.py  test_claude_agents_present.py  test_claude_code_workflow_controls_audit_documented.py  test_claude_hooks_present.py  test_claude_review_workflow_present.py  test_claude_rules_present.py  test_claude_session_report.py  test_claude_skills_present.py  test_claude_surface_contract.py  test_claudemd_under_200_lines.py  test_console_api_data_pipeline.py  test_cron_fundamentals_refresh.py  test_cutover_agent_parity_freshness.py  test_daily_bars_coverage_collapse_auto_cascade.py  test_daily_bars_force_refresh_chunked.py  test_dashboard_defect_register.py  test_dashboard_escalation.py  test_dashboard_platform_health.py  test_data_repair_service.py  test_defect_register.py  test_deterministic_cascade_catalog.py  test_dev_pipeline_standard_present.py  test_dev_system_audit_wrapper.py  test_earnings_events_t1_t2_coverage.py  test_engine_lane_self_heal_wave3.py  test_engine_llm_triage_agent.py  (+74 more)
tpcore/: README.md  (+9 more)
(+1234 files in other folders)
