[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "short-term-trading-engine"
version = "0.0.1"
description = "Multi-engine quantitative trading platform with shared core (tpcore), platform schema, and pluggable engines."
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "STE Team" }]

dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "asyncpg>=0.29",
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "exchange_calendars>=4.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "alpaca-py>=0.30",
    "PyYAML>=6.0",
    "scipy>=1.11",
    "croniter>=2.0",
    "xlrd>=2.0",
    "anthropic>=0.100,<1",
    # S3-compatible object-storage client for the R3 substrate migration
    # (env-pluggable archive backend). Lazy-imported inside
    # ``tpcore.ingestion.csv_archive_backends.S3Backend`` so the local-
    # default code path pays zero import cost. Chosen over boto3 for
    # transitive-dep weight: minio is a single package with no
    # botocore/awscli/jmespath/s3transfer tail, and natively accepts an
    # ``endpoint=`` arg — works against ANY S3-compatible service
    # (Railway native object store, R2, Supabase Storage, MinIO, S3
    # proper), which is exactly the R3 design's "S3-compatible bucket
    # attached to the service".
    "minio>=7.2,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.6,<4",
    "ruff>=0.4",
    "mypy>=1.10",
    "vulture>=2.11,<3",
]
dashboard = [
    # Operator dashboard — see docs/superpowers/specs/2026-05-13-operator-dashboard.md.
    # Streamlit pinned <1.50 because the chart-library wrapper
    # (streamlit-lightweight-charts-pro, used in Phase 3 of the dashboard)
    # is at 0.x and minor-bump compatibility isn't proven.
    "streamlit>=1.30,<1.50",
    "streamlit-lightweight-charts-pro>=0.3.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.scripts]
ste-check-imports = "tpcore.scripts.check_imports:main"

[tool.setuptools.packages.find]
# NOTE: ``platform/`` is intentionally NOT a Python package — that name shadows
# the stdlib ``platform`` module (used transitively by pandas/exchange_calendars).
# It contains only Alembic migration files which are loaded by path, not import.
include = [
    "tpcore*",  # sigma archived 2026-05-16
# >>> engine-manifest:pyproject-include (generated by scripts/gen_engine_manifest.py — edit the SoT, not this) >>>
    "reversion*",
    "vector*",
    "momentum*",
    "sentinel*",
    "canary*",
    "catalyst*",
# <<< engine-manifest:pyproject-include <<<
]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Validation suite ships hand-curated YAML fixtures alongside the code.
"tpcore.quality.validation" = ["fixtures/*.yaml"]

[tool.ruff]
line-length = 110
target-version = "py311"
# Shared 3-way exclude triplet — keep this coherent with the
# [tool.pytest.ini_options] norecursedirs below and the tracked `.ignore`
# file. The three deliberately near-duplicate; their divergences are
# intentional (see `.ignore`). FIX-2 shell-kwarg cross-ref precedent.
#
# `respect-gitignore = false`: root `data/` is NOT gitignored — the
# original silent drop of the first-party package tpcore/data/ came from
# TWO any-depth matchers, not .gitignore: (1) the unanchored `"data"` that
# was in `extend-exclude`, and (2) the tracked `.ignore` (P2.2), which ruff
# honours via ignore-file discovery (ripgrep semantics) so its `data/` also
# matched at ANY depth. Disabling ignore-file discovery removes (2); the
# `./`-anchored patterns below fix (1) — these explicit patterns are now
# the single authoritative source.
# `./x` = root-relative (a pattern containing a slash is "relative to the
# project root" per ruff docs; verified empirically on ruff 0.15.12 that
# leading-"/" does NOT root-anchor but "./x" / "x/" do) — the 1.4 GB root
# data/ + root logs/ + root .claude/ ONLY, NOT tpcore/data/. "*_archive"
# stays unanchored: a suffix glob for the data/*_archive/ dirs at any depth
# (verified: no first-party package matches *_archive).
respect-gitignore = false
extend-exclude = ["./data", "./logs", "*_archive", "./.claude"]

[tool.ruff.lint]
# DTZ (flake8-datetimez) mechanizes the prose-only CLAUDE.md "all
# timestamps UTC" mandate — a naive datetime on a live trade/risk/data
# path is a #245-class real bug. Pre-existing violations were baselined
# once via `ruff check --select DTZ --add-noqa .` (genuinely-benign /
# non-money paths only — every live-money-path noqa was spot-audited);
# from here ALL NEW code must be tz-aware (no new naive datetimes).
# SLF (flake8-self / SLF001) mechanizes the prose-only CLAUDE.md /
# STYLE_GUIDE rule "Never access private attributes (._store/._pool
# etc.) on tpcore classes — use a public accessor; if none exists,
# extend the tpcore class — do NOT add a # noqa: SLF001". Pre-existing
# violations were baselined ONCE via `ruff check --select SLF
# --add-noqa .` (test/fixture/non-tpcore-private sites). From here NEW
# code that needs a tpcore internal MUST add a public accessor — NOT a
# new SLF001 noqa (a new noqa on production tpcore-private access is a
# direct CLAUDE.md violation, not a baseline). See STYLE_GUIDE.md
# "Private-attribute access on tpcore classes".
select = ["E", "F", "I", "B", "UP", "DTZ", "SLF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# `l` for "low" is a natural OHLC variable name in test fixtures; the rule
# (E741: ambiguous variable name) targets production code where one-letter
# names hurt readability, not synthetic-bar generators.
"**/tests/**" = ["E741", "E702"]
# The SP2 characterization oracle is a MAKE-OR-BREAK BYTE-FROZEN
# regression asset: `tpcore/tests/test_lab_dsr_delivered.py::
# test_sp_a2_t_oracle_byte_unmodified_and_green` asserts it is
# byte-identical to origin/main. The SLF001 hits there are non-tpcore
# private access (`sp._norm_inv`, a local search-params module helper
# — benign), but the file CANNOT carry an inline `# noqa: SLF001`
# baseline without violating its byte-frozen §5 invariant. Ignore SLF
# for this one frozen oracle instead (the only correct baseline form
# for a deliberately-immutable asset).
"scripts/tests/test_search_parameters_characterization.py" = ["SLF"]
# Lean P5.4a live-money characterization test: proving the momentum delegate
# is byte-equivalent REQUIRES calling its private
# `_cancel_stale_momentum_orders` (the parity oracle — that IS the test's
# purpose). Engine-private (NOT tpcore-private) access in a char-test; the
# scoped per-file ignore is the correct form (mirrors the frozen-oracle
# precedent above) — never an inline `# noqa: SLF001`.
"tpcore/tests/test_stale_order_cancel.py" = ["SLF"]
# SP-B T4 dispatch-seam characterization test: pinning that the lazy
# PARAM_RANGES + `_lab_target_for` resolver + the `_runner_for`/
# `_context_loader_for`/`_context_runner_for` thin views preserve the
# spec §6/§8 private seam names REQUIRES naming those `ops.lab.run`-
# private symbols (that IS the test's purpose — the oracle's by-name
# monkeypatch binds them). Engine-lane-module-private (NOT tpcore-
# private) access in a char-test; the scoped per-file ignore is the
# correct form (mirrors the two frozen/char-oracle precedents above) —
# never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_dispatch_indirection.py" = ["SLF"]
# SP-B T5 CLI-choices-from-roster test: proving both argparse surfaces
# generate `--engine`/`--target-engine` choices from
# `lab_targetable_engines()` REQUIRES calling the `ops.lab.run` /
# `ops.lab.__main__`-private `_parse_args` (that IS the test's purpose —
# it exercises the built parser). Engine-lane-module-private (NOT tpcore-
# private) access in a CLI-contract test; the scoped per-file ignore is
# the correct form (mirrors the char/dispatch-seam precedents above) —
# never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_cli_choices_from_roster.py" = ["SLF"]
# SP-B T6 roster-Lab consistency clockwork: the runtime-equality
# clockwork + synthetic-drift red-proof + SP-A non-regression REQUIRES
# naming the `ops.lab.run` / `ops.lab.__main__`-private `_parse_args` /
# `_lab_target_for` / `_run_lab_core` / `compute_dsr_for_verdict` and the
# `tpcore.engine_profile`-private `_PROFILE` (that IS the test's purpose
# — it exercises the built parsers, the resolver seam, and the ledger
# spine, and injects a synthetic _PROFILE entry to prove the clockwork
# reds on drift). Engine-lane-module-private (NOT tpcore-private) access
# in a consistency-clockwork test; the scoped per-file ignore is the
# correct form (mirrors the char/dispatch/CLI-choices precedents above)
# — never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE). Task-6
# in the plan had no pyproject step; this entry was added as a
# controller-adjudicated Plan correction (the SLF-baseline plan-defect
# class, T5 Step-4b precedent).
"tpcore/tests/test_lab_targeting_consistency.py" = ["SLF"]
# SP-D §5.1 char-before-refactor anchor: pinning the CURRENT Sharpe
# ranking REQUIRES naming the `ops.lab.run`-private `_score_for_ranking`
# (that IS the test's purpose — it freezes the private scorer's closed
# form). Engine-lane-module-private (NOT tpcore-private) access in a
# char-oracle; the scoped per-file ignore is the correct form (mirrors
# the SP-B char/dispatch precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_sp_d_char_anchor.py" = ["SLF"]
# SP-D §5.2 make-or-break + §5.5 units: proving gate-invariance + the
# pre-SP-D-sidecar regression REQUIRES naming `ops.lab.run`-private
# symbols (`_run_lab_core`, `_build_lab_result`, `_RANKING_METRICS`,
# `_lab_target_for`, `_score_for_ranking`, `rank_candidates`,
# `compute_slice_metrics_from_trades`, `period_returns_from_trades`,
# `compute_dsr_for_verdict`) — that IS the tests' purpose. Engine-lane-
# module-private (NOT tpcore-private) access; the scoped per-file ignore
# is the correct form (SP-B precedent) — never an inline `# noqa: SLF001`.
"tpcore/tests/test_lab_sp_d_make_or_break.py" = ["SLF"]
"tpcore/tests/test_lab_sp_d_units.py" = ["SLF"]
# SP-E Sentinel proof case: proving Sentinel's declared non-Sharpe
# MAXDD_REDUCTION ranks correctly while the sacred gate is byte-identical
# REQUIRES naming `ops.lab.run`-private symbols (`_lab_target_for`,
# `_resolve_ranking_metric`, `_score_for_ranking`, `rank_candidates`,
# `TrialResult`, `compute_slice_metrics_from_trades`) — that IS the
# test's purpose (it instantiates the SP-D make-or-break on Sentinel's
# exact bar through the real SP-B roster resolver). Engine-lane-module-
# private (NOT tpcore-private) access; the scoped per-file ignore is the
# correct form (SP-B/SP-D precedent) — never an inline `# noqa: SLF001`
# (CLAUDE.md / STYLE_GUIDE).
"sentinel/tests/test_lab_maxdd_ranking_gate_sacred.py" = ["SLF"]
# SP-F Catalyst proof case (lab_candidate_readiness §2/§3 C4): the
# byte-identical / no-cross-trial-leakage characterization test
# REQUIRES naming the `catalyst.backtest`-private
# `_CLUSTER_WINDOW_OVERRIDE` to prove the per-call module-global reset
# discipline (the SP-D/SP-E precedent for engine-OWNED Lab seams).
# Engine-lane-module-private (NOT tpcore-private) access in a
# characterization test; the scoped per-file ignore is the correct form
# (mirrors the SP-B/SP-D/SP-E precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"catalyst/tests/test_catalyst_backtest.py" = ["SLF"]
"catalyst/tests/test_lab_cluster_window_byte_identical.py" = ["SLF"]
# vector_composite Lab candidate (spec
# docs/superpowers/specs/2026-05-20-vector-composite-lab-candidate.md
# §3.3): the byte-identical / no-cross-trial-leakage C1-C4
# characterization test REQUIRES naming the ``vector.backtest``-private
# `_COMPOSITE_MODE_OVERRIDE` to prove the per-call module-global reset
# discipline (H-VC-8 — the same SP-D/SP-E/SP-F precedent for engine-
# OWNED Lab seams). Engine-lane-module-private (NOT tpcore-private)
# access; the scoped per-file ignore is the correct form (mirrors the
# SP-B/SP-D/SP-E/SP-F precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"vector/tests/test_composite_flag_byte_identical.py" = ["SLF"]
# Orphan-script zero-allowlist migration tests (2026-05-21). Each
# stage test asserts the new ``ops.py``-private ``_stage_<name>``
# coroutine is registered in ``_STAGE_SPECS`` + ``KNOWN_STAGES`` and
# smoke-tests its body via a FakePool/FakeConn double — that IS the
# tests' purpose (mirror of the just-shipped
# ``test_compute_fundamental_ratios_stage.py`` precedent). Engine-
# lane-module-private (NOT tpcore-private) access in registration-pin
# + body-smoke tests; the scoped per-file ignore is the correct form
# (mirrors every other SP-B/SP-D/SP-E/SP-F char-test precedent above)
# — never an inline ``# noqa: SLF001`` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_compute_fundamental_ratios_stage.py" = ["SLF"]
"tpcore/tests/test_compare_baselines_stage.py" = ["SLF"]
"tpcore/tests/test_aar_pipeline_smoke_stage.py" = ["SLF"]
"tpcore/tests/test_kill_switch_smoke_stage.py" = ["SLF"]
"tpcore/tests/test_extract_tradier_full_stage.py" = ["SLF"]
"tpcore/tests/test_ingest_tradier_csv_stage.py" = ["SLF"]
# Lab final-holdout chunking test (statement_timeout fix, 2026-05-21).
# Proving the chunked replay partitions the holdout disjointly + does
# NOT multiply the SP-A ledger spend REQUIRES naming the
# ``ops.lab.run``-private ``chunk_final_holdout``,
# ``_run_final_holdout_chunked`` and ``_run_lab_core`` (that IS the
# test's purpose — the transport invariant lives at that seam).
# Engine-lane-module-private (NOT tpcore-private) access; the scoped
# per-file ignore is the correct form (mirrors the SP-B/SP-D/SP-E/SP-F
# precedents above) — never an inline ``# noqa: SLF001``.
"tpcore/tests/test_lab_final_holdout_chunking.py" = ["SLF"]
# daily_bars coverage_collapse → repair_gaps auto-cascade regression
# (operator-reproduced 2026-05-18 → 2026-05-20). Proving the cascade
# fires on coverage_collapse but NOT on other FAILED modes REQUIRES
# naming ``scripts/ops.py``-private symbols (``_stage_daily_bars``,
# ``_load_daily_bars_config``, ``_market_open_block_reason``,
# ``_per_feed_tripwire``, ``_self_heal_failed_stages``,
# ``_STAGE_SPECS``, ``_DAILY_BARS_COVERAGE_COLLAPSE_TOKEN``) — that
# IS the test's purpose (it monkeypatches the live pipeline down to a
# single-stage harness so the cascade decision can be observed). Engine-
# lane-module-private (NOT tpcore-private) access; the scoped per-file
# ignore is the correct form (mirrors every other SP-B/SP-D/SP-E/SP-F
# char-test precedent above) — never an inline ``# noqa: SLF001``.
"tests/test_daily_bars_coverage_collapse_auto_cascade.py" = ["SLF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Part of the 3-way exclude triplet (see [tool.ruff] extend-exclude above and
# the tracked `.ignore`). norecursedirs is basename-fnmatch ONLY (cannot
# root-anchor), so "data"/"logs" would also match the first-party package
# tpcore/data/ — and they were redundant anyway: `testpaths` below already
# scopes collection to explicit dirs, so root data/ + logs/ are never walked.
# Dropped them; only basename-safe non-package entries remain.
norecursedirs = [".claude", "*_archive", ".git", ".venv"]
markers = [
    "xdist_group: pytest-xdist group pinning (ops-shadow single-worker isolation; P1.3)",
]
testpaths = [
    "tests",
    "tpcore/tests",
    "tpcore/forensics/tests",
    "tpcore/outage/tests",
    "tpcore/quality/validation/tests",
# >>> engine-manifest:pyproject-testpaths (generated by scripts/gen_engine_manifest.py — edit the SoT, not this) >>>
    "reversion/tests",
    "vector/tests",
    "momentum/tests",
    "sentinel/tests",
    "canary/tests",
    "catalyst/tests",
# <<< engine-manifest:pyproject-testpaths <<<
    "scripts/tests",
]
